kubernetes-manifests-spiffe/checkoutservice.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: ConfigMap
metadata:
  name: checkoutservice-envoy-jwt-auth-helper-config
data:
  envoy-jwt-auth-helper.conf: |
    socket_path = "unix:///run/spire/agent-sockets/spire-agent.sock"
    host = "127.0.0.1"
    port = 9010
    jwt_mode = "jwt_svid_validator"
    audience = "example.microservice-demo.checkoutservice"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: checkoutservice-envoy
data:
  envoy.yaml: |
    node:
      id: backend
      cluster: checkoutservice-spire
    static_resources:
      listeners:
      - name: local_service
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 5050
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: local_service
              http_filters:
              - name: envoy.filters.http.router
                typed_config: {}
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificate_sds_secret_configs:
                - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                  sds_config:
                    api_config_source:
                      api_type: gRPC
                      transport_api_version: v3
                      grpc_services:
                        envoy_grpc:
                          cluster_name: spire_agent
                tls_params:
                  ecdh_curves: X25519:P-256:P-521:P-384
                combined_validation_context:
                  validation_context_sds_secret_config:
                    name: "spiffe://home.usableapps.io"
                    sds_config:
                      resource_api_version: V3
                      api_config_source:
                        api_type: GRPC
                        transport_api_version: V3
                        grpc_services:
                          envoy_grpc:
                            cluster_name: spire_agent
                  # validate the SPIFFE ID of incoming callers
                  default_validation_context:
                    match_typed_subject_alt_names:
                    - san_type: URI
                      matcher:
                        exact: "spiffe://home.usableapps.io/example.microservice-demo.frontend"
      - name: productcatalogservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 3550
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: productcatalogservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: productcatalogservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: productcatalogservice:3550
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: shippingservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 50051
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: shippingservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: shippingservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: shippingservice:50051
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: currencyservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 7000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: currencyservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: currencyservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: currencyservice:7000
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: cartservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 7070
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: cartservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: cartservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: cartservice:7070
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: paymentservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 50052
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: paymentservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: paymentservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: paymentservice:50051
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: emailservice
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 5000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              common_http_protocol_options:
                idle_timeout: 10s
              codec_type: auto
              access_log:
                name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /tmp/inbound-proxy.log
              stat_prefix: egress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: emailservice
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: /
                    route:
                      cluster: emailservice
                    typed_per_filter_config:
                      envoy.filters.http.dynamic_forward_proxy:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
                        host_rewrite_literal: emailservice:5000
              http_filters:
              - name: envoy.filters.http.dynamic_forward_proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                  dns_cache_config:
                    name: dynamic_forward_proxy_cache_config
                    dns_lookup_family: V4_ONLY
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: local_service
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: local_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 5051
      - name: productcatalogservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: shippingservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: paymentservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: emailservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: currencyservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: cartservice
        connect_timeout: 1s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
            dns_cache_config:
              name: dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
            allow_insecure_cluster_options: true
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificate_sds_secret_configs:
              - name: "spiffe://home.usableapps.io/example.microservice-demo.checkoutservice"
                sds_config:
                  api_config_source:
                    api_type: gRPC
                    transport_api_version: v3
                    grpc_services:
                      envoy_grpc:
                        cluster_name: spire_agent
              tls_params:
                ecdh_curves: X25519:P-256:P-521:P-384
      - name: spire_agent
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: spire_agent
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  pipe:
                    path: /run/spire/agent-sockets/spire-agent.sock
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
        spiffe.io/spiffe-id: example.microservice-demo.checkoutservice
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
          image: checkoutservice
          ports:
          - containerPort: 5051
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5051"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5051"]
          env:
          - name: PORT
            value: "5051"
          - name: PRODUCT_CATALOG_SERVICE_ADDR
            value: "127.0.0.1:3550"
          - name: SHIPPING_SERVICE_ADDR
            value: "127.0.0.1:50051"
          - name: PAYMENT_SERVICE_ADDR
            value: "127.0.0.1:50052"
          - name: EMAIL_SERVICE_ADDR
            value: "127.0.0.1:5000"
          - name: CURRENCY_SERVICE_ADDR
            value: "127.0.0.1:7000"
          - name: CART_SERVICE_ADDR
            value: "127.0.0.1:7070"
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
        - name: envoy
          image: envoyproxy/envoy-alpine:v1.21.6
          imagePullPolicy: IfNotPresent
          args: ["-l", "debug", "--local-address-ip-version", "v4", "-c", "/run/envoy/envoy.yaml"]
          ports:
            - name: envoy
              containerPort: 5050
          volumeMounts:
          - name: checkoutservice-envoy-config
            mountPath: "/run/envoy"
            readOnly: true
          - name: spire-agent-socket
            mountPath: /run/spire/agent-sockets
            readOnly: true
        - name: auth-helper
          image: us.gcr.io/scytale-registry/envoy-jwt-auth-helper@sha256:e55ce5fd42f13c5475b285a848c5f83bc4a335a93d7f934d3ac884920045fc96
          imagePullPolicy: IfNotPresent
          args:  ["-config", "/run/envoy-jwt-auth-helper/config/envoy-jwt-auth-helper.conf"]
          ports:
          - containerPort: 9010
          volumeMounts:
          - name: checkoutservice-envoy-jwt-auth-helper-config
            mountPath: "/run/envoy-jwt-auth-helper/config"
            readOnly: true
          - name: spire-agent-socket
            mountPath: /run/spire/agent-sockets
            readOnly: true
      volumes:
      - name: spire-agent-socket
        hostPath:
          path: /run/spire/agent-sockets
          type: Directory
      - name: checkoutservice-envoy-config
        configMap:
          name: checkoutservice-envoy
      - name: checkoutservice-envoy-jwt-auth-helper-config
        configMap:
            name: checkoutservice-envoy-jwt-auth-helper-config
